Realizado a criação do cartão de visita com html e css mobile-first, será necessário finalizar as mediaqueries para desktop

--- a/ed07-origin/index.html
+++ b/ed07-origin/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <title>Wendel Cutrim - DoWhile 2021</title>
 </head>
+
 <body>
-    <h1>Wendel Cutrim</h1>
-    <a href="https://www.instagram.com/wendeldim" target="_blank">@wendeldim</a>
+    <main>
+        <div class="container">
+            <div class="avatar">
+                <span>
+                    <img src="/img/build.svg" alt="Rocketseat Build">
+                </span>
+                <img src="img/profile-picture.png" alt="Profile Picture">
+            </div>
+            <h1>Wendel Cutrim</h1>
+            <a href="https://www.instagram.com/wendeldim" target="_blank">
+                <img src="/img/github.svg" alt="Github Icon">
+                wendeldim</a>
+
+            <p>An instructor focused on helping people start programming for web</p>
+
+            <ul>
+                <li>
+                    <a href="" target="_blank">
+                        <img src="img/youtube.svg" alt="Youtube Icon">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/wendelcutrim" target="_blank">
+                        <img src="img/facebook.svg" alt="Facebook Icon">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/wendeldim" target="_blank">
+                        <img src="img/instagram.svg" alt="Instagram Icon">
+                    </a>
+                </li>
+                <li>
+                    <a href="" target="_blank">
+                        <img src="img/twitter.svg" alt="Twitter Icon">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </main>
 </body>
+
 </html>
