Realizado a finalização dos links das redes sociais e inserido o background color para dispositivos que não são mobile.

--- a/ed07-origin/index.html
+++ b/ed07-origin/index.html
@@ -26,11 +26,16 @@
                 <img src="/img/github.svg" alt="Github Icon">
                 wendeldim</a>
 
-            <p>An instructor focused on helping people start programming for web</p>
+            <p>Tech lover!👨‍💻
+                <br>
+                    Bachelor in Aeronautical Sciences🛩️
+                <br>
+                    Coffe is my life ☕
+            </p>
 
             <ul>
                 <li>
-                    <a href="" target="_blank">
+                    <a href="https://www.youtube.com/user/wendeldim" target="_blank">
                         <img src="img/youtube.svg" alt="Youtube Icon">
                     </a>
                 </li>
@@ -45,7 +50,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="" target="_blank">
+                    <a href="https://twitter.com/wendelcutrim" target="_blank">
                         <img src="img/twitter.svg" alt="Twitter Icon">
                     </a>
                 </li>
