Realizado o preenchimento dos dados do perfil de acordo com os ensinamentos da aula 4 com os dados sendo preenchidos consumindo a api do do GitHub. removido a função de criar o nome do crachá createUserName pois não será mais necessário, visto que os dados do nome virá da API do github

--- a/ed07-origin/index.html
+++ b/ed07-origin/index.html
@@ -19,14 +19,14 @@
                 <span>
                     <img src="/img/build.svg" alt="Rocketseat Build">
                 </span>
-                <img src="img/profile-picture.png" alt="Profile Picture">
+                <img id="userAvatar" src="img/profile-picture.png" alt="Profile Picture">
             </div>
             <h1 id="cardUserName"></h1>
-            <a href="https://www.github.com/wendelcutrim" target="_blank">
+            <a id="userLink" href="https://www.github.com/aaa" target="_blank">
                 <img src="/img/github.svg" alt="Github Icon">
-                wendeldim</a>
+                <span id="userLogin">aaa</span></a>
 
-            <p>Tech lover!👨‍💻
+            <p id="userBio">Tech lover!👨‍💻
                 <br>
                 Bachelor in Aeronautical Sciences🛩️
                 <br>
@@ -49,10 +49,10 @@
                         <img src="img/instagram.svg" alt="Instagram Icon">
                     </a>
                 </li>
-                <li class="twitter">
-                    <a href="https://twitter.com/aaa" target="_blank">
-                        <img src="img/twitter.svg" alt="Twitter Icon">
-                    </a>
+                    <li class="linkedin">
+                        <a href="https://linkedin.com/in/aaa" target="_blank">
+                            <img src="img/linkedin.svg" alt="Linkedin Icon">
+                        </a>
                 </li>
             </ul>
         </div>
